GNOME Bugzilla – Bug 755240
crash on window close
Last modified: 2015-10-19 20:07:57 UTC
From https://bugzilla.redhat.com/show_bug.cgi?id=1264314 : #0 g_type_check_instance_cast at gtype.c:4060 #1 terminal_window_update_geometry at terminal-window.c:3566 #7 g_object_notify_by_spec_internal at gobject.c:1154 #8 g_object_notify_by_pspec at gobject.c:1264 #9 gtk_notebook_set_show_tabs at gtknotebook.c:7561 #10 terminal_notebook_page_removed at terminal-notebook.c:325 #15 gtk_notebook_remove at gtknotebook.c:4241 #16 g_cclosure_marshal_VOID__OBJECTv at gmarshal.c:2102 #17 _g_closure_invoke_va at gclosure.c:864 #20 gtk_container_remove at gtkcontainer.c:1893 (see https://bugzilla.redhat.com/attachment.cgi?id=1074697 for the full trace) The line number is a bit off due to fedora patches, but it's this line it's crashing on: widget = GTK_WIDGET (priv->active_screen);
Created attachment 311673 [details] [review] patch This alone should fix it, I think.
Created attachment 311674 [details] [review] extra patch This is a further patch making the window safely handle zero tabs.
I committed both patches to master and 3-18, but since I cannot repro the original crash, I need confirmation from someone who can.
Reports seem to have fallen off as soon as 3.18.0 was packaged (which included the patches), and all versions were < 3.18.0. So let's call this one FIXED.