notebook: Don't change show-tabs when going to empty notebook

The window will close anyway, so the change is unnecessary. This fixes
a crash in terminal-window's show-tabs change handler.

https://bugzilla.gnome.org/show_bug.cgi?id=755240